EPAD8-2416: Fix position of dropdowns on mobile

--- a/services/drupal/web/modules/custom/epa_workflow/css/epa-node-details.css
+++ b/services/drupal/web/modules/custom/epa_workflow/css/epa-node-details.css
@@ -14,8 +14,12 @@ svg.epa-node-details__button-icon {
 
 .epa-node-details__drawer {
   color: var(--epa-color-tabs);
-  inset-inline-end: 0;
+  inset-inline-start: 0;
   min-width: 12rem;
+
+  @media (min-width: 40em) {
+    inset-inline: auto 0;
+  }
 }
 
 .epa-node-details__drawer-item {
